move html wrapping back to pluugins and address modal overlay bug when using stable themes

--- a/core/themes/stable/css/tour/tour.module.css
+++ b/core/themes/stable/css/tour/tour.module.css
@@ -149,3 +149,25 @@
 .shepherd-element.joyride-tip-guide[hidden] {
   display: none;
 }
+
+.shepherd-modal-overlay-container {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  width: 100vw;
+  height: 0;
+  pointer-events: none;
+  opacity: 0;
+  fill-rule: evenodd;
+}
+
+.shepherd-modal-overlay-container.shepherd-modal-is-visible {
+  height: 100vh;
+  opacity: 0.5;
+}
+
+.shepherd-modal-overlay-container.shepherd-modal-is-visible path {
+  pointer-events: all;
+}
